# ib-trading-agent

./: .env.example  .gitignore  README.md  agent.py  ecosystem.config.js  pyproject.toml  start_agent.bat  stop_agent.bat  trading agent prompt.txt
.kiro/steering/: testing-and-docs.md  trading-architecture.md  trading-risk-management.md  trading-strategy-conventions.md
docs/: deployment.md  improvement ideas  improvement_strategy.md  novi improvement prompt.txt  performance_analysis.md  real_acc_switch_prompt.txt  test_plan.md  test_report.md
scripts/: check_live_market_data.py  close_all_positions.py  dashboard_server.py  performanse boost prompt.txt  portfolio_status.py  run_agent.bat  run_dashboard.bat  send_report_now.py  simple_status.py
src/: __init__.py  agent.py  config.py  logging_config.py
src/models/: __init__.py  domain.py
src/services/: __init__.py  connection_manager.py  llm_service.py  market_data_service.py  market_hours_service.py  market_screener.py  order_executor.py  polymarket_service.py  report_generator.py  risk_manager.py  shutdown_handler.py  state_manager.py  strategy_engine.py  watchlist_manager.py  yahoo_data_provider.py
src/strategies/: __init__.py  indicator_cache.py  indicators.py
systemd/: trading-agent.service
test/: __init__.py  test_agent.py  test_backtest.py  test_indicators.py  test_performance.py
tests/: __init__.py
tests/backtest/: __init__.py
tests/integration/: __init__.py
tests/performance/: __init__.py
tests/property/: __init__.py
tests/unit/: __init__.py  test_agent.py  test_cli.py  test_indicators.py  (+15 more)
(+4 files in other folders)
